Added some more detail.

--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
 			<div class="article">
 				<h3>Why We Created Ulti-Mate</h3>
 				<p>
-					Our inspiration for Ulti-Mate came from our deep passion for Ultimate. Our many years in the game and the wish for automation of game scoring / tracking led us to this path, ultimately. I expect this app to change a lot in the next few years as we listen and respond to feedback from our users. Ultimate players have a history of being amicable, and we intent to show our appreciation through a beautifully designed helper app. Enjoy!
+					Our inspiration for Ulti-Mate came from our deep passion for Ultimate. Our many years in the game and the wish for automation of game scoring / tracking led us to this path, ultimately. I expect this app to change a lot in the next few years as we listen and respond to feedback from our users. Ultimate players have a history of being amicable, and we intend to show our appreciation through a beautifully designed helper app. Enjoy!
 				</p>
 				<h3>Version Notes</h3>
 				<p>
