--- a/highlights.html
+++ b/highlights.html
@@ -81,6 +81,12 @@
 				</a>
 			</li>
 		</ul>
+		<div>
+			<div class="article">
+				<h3>How to use this page:</h3>
+				<p>Hover your mouse over any photo above to view details about many special features in our app!</p>
+			</div>
+		</div>
 	</div>
 	<div id="footer">
 		<div>
