--- a/index.html
+++ b/index.html
@@ -37,30 +37,30 @@
 		<div id="featured">
 			<img src="images/the-beacon.jpg" alt="">
 			<div>
-				<h2>the beacon to all mankind</h2>
-				<span>Our website templates are created with</span>
-				<span>inspiration, checked for quality and originality</span>
-				<span>and meticulously sliced and coded.</span>
-				<a href="blog-single-post.html" class="more">read more</a>
+				<h2>the ultimate app</h2>
+				<span>Our app makes sure you never forget the</span>
+				<span>score of an Ultimate game.</span>
+				<span>Dive into Ulti-mate and begin recording</span>
+				<span>matches during league play or pickup!</span>
 			</div>
 		</div>
 		<ul>
 			<li>
 				<a href="highlights.html">
 					<img src="images/the-father.jpg" alt="">
-					<span>the father</span>
+					<span>Create Games</span>
 				</a>
 			</li>
 			<li>
 				<a href="highlights.html">
 					<img src="images/the-actor.jpg" alt="">
-					<span>the actor</span>
+					<span>Set Notifications</span>
 				</a>
 			</li>
 			<li>
 				<a href="highlights.html">
 					<img src="images/the-nerd.jpg" alt="">
-					<span>the nerd</span>
+					<span>Share scores</span>
 				</a>
 			</li>
 		</ul>
